<resources>
    <string name="app_name">PunchBuggy</string>
    <string name="red_buggy">Red Punch Buggy</string>
    <string name="orange_buggy">Orange Punch Buggy</string>
    <string name="yellow_buggy">Yellow Punch Buggy</string>
    <string name="green_buggy">Green Punch Buggy</string>
    <string name="blue_buggy">Blue Punch Buggy</string>
    <string name="purple_buggy">Purple Punch Buggy</string>
    <string name="pink_buggy">Pink Punch Buggy</string>
    <string name="black_buggy">Black Punch Buggy</string>
    <string name="white_buggy">White Punch Buggy</string>
    <string name="silver_buggy">Silver Punch Buggy</string>
    <string name="home_button">Home Button</string>
    <string name="HOME">HOME</string>
    <string name="view_games">View Games</string>
    <string name="user_management">User Management</string>
    <string name="add_user">Add</string>
    <string name="remove_user">Remove</string>
    <string name="username_hint">username</string>
    <string name="punchBuggiesLogo">Image of Punch Buggies</string>
    <string name="saveButton">Save</string>
    <string name="userExistsWarning">User already exists!</string>
    <string name="title_activity_help">Help</string>
    <string name="icon">Icon</string>
    <string name="help">Help</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="inital_release">Initial release</string>

    <string name="how_to_add">
        To add points when a punchy buggy is seen, click on the color
        of the punch buggy that was seen.
    </string>

    <string name="how_to_remove">
        To remove points for a color, press down on the punch buggy until
        the count decreases.
    </string>

    <string name="player_management">
        Add or remove players from the User Management page.
    </string>

    <string name="thanks">
        Thanks for playing!
    </string>

</resources>