<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManagement">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/addUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        tools:text="csisl" />

    <Button
        android:id="@+id/addUser"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/removeUser"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <ListView
        android:id="@+id/userListView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="#F3F1FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/removeUser"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/remove_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

    <ImageButton
        android:id="@+id/saveUsers"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/save"
        android:contentDescription="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/userExistsWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/userExistsWarning"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User already exists" />

</androidx.constraintlayout.widget.ConstraintLayout>